<resources>
    <string name="app_name">Normanda-C.App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wiki">WIKI</string>
    <string name="challenge">Challenge</string>
    <string name="player_image">PLAYER IMAGE</string>
    <string name="health_health">Health = + Health</string>
    <string name="level_player_level">Level = + Player_level</string>
    <string name="player_attack_atk">player_Attack = + atk</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">sign In</string>
    <string name="password">Password</string>
    <string name="e_mail">e-mail</string>
    <string name="came_from_hell">Came from hell</string>
    <string name="_10_damage">10 + Damage</string>
    <string name="_10_gold">10 gold</string>
    <string name="bruno">Bruno</string>

    <string name="_10">10</string>
    <string name="n2">N2</string>
    <string name="n1">N1</string>
    <string name="n3">N3</string>
    <string name="n4">N4</string>
    <string name="_10_00">10:00</string>

    <string name="add">TODO</string>
    <string name="todoasd">TODO</string>
    <string name="todoads">TODO</string>
    <string name="n11">N1!</string>
    <string name="todo">TODO</string>
    <string name="not_yet">Not Yet</string>

    <string name="z">TODO</string>



</resources>