<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin = "5dp"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#d0b486">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="0dp"

            android:layout_marginTop="54dp"
            android:layout_marginBottom="61dp"
            android:src="@drawable/escudo0"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/item_text"
            android:layout_width="181dp"
            android:layout_height="27dp"
            android:layout_alignEnd="@+id/item_lore"
            android:layout_alignRight="@+id/item_lore"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="93dp"
            android:layout_marginRight="93dp"
            android:layout_marginBottom="162dp"
            android:layout_toEndOf="@+id/item_image"
            android:layout_toRightOf="@+id/item_image"
            android:fontFamily="@font/roman_sd"
            android:text="@string/bruno"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_value"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="192dp"
            android:layout_marginLeft="192dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="70dp"
            android:layout_toEndOf="@+id/item_image"
            android:layout_toRightOf="@+id/item_image"
            android:fontFamily="@font/roman_sd"
            android:text="@string/_10"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/item_lore"
            android:layout_width="274dp"
            android:layout_height="77dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="29dp"
            android:layout_marginRight="29dp"
            android:layout_marginBottom="64dp"
            android:layout_toEndOf="@+id/item_image"
            android:layout_toRightOf="@+id/item_image"
            android:fontFamily="@font/roman_sd"
            android:text="@string/came_from_hell"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/item_stats"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="25dp"
            android:layout_toEndOf="@+id/item_image"
            android:layout_toRightOf="@+id/item_image"
            android:fontFamily="@font/roman_sd"
            android:text="@string/_10_damage"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/gold_bag"
            android:layout_width="41dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="326dp"
            android:layout_marginLeft="326dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="29dp"
            android:layout_marginRight="29dp"
            android:layout_marginBottom="143dp"
            android:src="@drawable/gold_bag" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>